# imlab_library

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  build.sh  todo.txt
.github/workflows/: cmake.yml
docs/: 2013-12-08-perspektif-donusumu.md  2014-01-26-c-ile-determinant-ve-matris-tersi.md  2015-07-14-icerik-tabanli-imge-olcekleme.md  2015-07-23-lojistik-regresyon-analizi.md  2015-07-27-en-kisa-yol-problemi-dinamik-programlama.md  2015-07-30-otomatik-rakam-tanima.md  2015-08-28-k-means-kumeleme-algoritmasi.md  2015-09-20-algisal-kiyim-fonksiyonu-perceptual.md  2015-10-16-imge-renksizlestirme-image.md  2015-11-01-karar-agaclari-decision-trees.md  2016-04-14-imge-renklendirme-image-colorization.md  2018-12-03-imlab-goruntu-isleme-kutuphanesi.md  2019-02-17-tumlev-imge-integral-image.md  2019-02-22-viola-jones-yontemi-ile-nesne-tespiti.md  2019-03-26-ozdeger-ve-ozvektorler-eigenvalues-and.md  2019-04-28-barkod-tespiti-barcode-detection.md  2019-07-14-makine-ogrenmesi-performans-olcutleri.md  2019-09-01-temel-bilesen-analizi-principal.md  Gemfile  _config.yml  imlab_doxy  imlab_doxy_mcss  m.math.cache  update_docs.bat
docs/_includes/: head.html  katex.html  mathjax.html
docs/_layouts/: default.html  home.html  post.html
docs/_plugins/: next_in_category.rb
docs/_posts/: 2015-07-14-icerik-tabanli-imge-olcekleme.md  2015-07-23-lojistik-regresyon-analizi.md  2015-07-27-en-kisa-yol-problemi-dinamik-programlama.md  2015-07-30-otomatik-rakam-tanima.md  2015-08-28-k-means-kumeleme-algoritmasi.md  2015-09-20-algisal-kiyim-fonksiyonu-perceptual.md  2015-10-16-imge-renksizlestirme-image.md  2015-11-01-karar-agaclari-decision-trees.md  2016-04-14-imge-renklendirme-image-colorization.md  2018-12-03-imlab-goruntu-isleme-kutuphanesi.md  2019-02-17-tumlev-imge-integral-image.md  2019-02-22-viola-jones-yontemi-ile-nesne-tespiti.md  2019-03-26-ozdeger-ve-ozvektorler-eigenvalues-and.md  2019-04-28-barkod-tespiti-barcode-detection.md  2019-07-14-makine-ogrenmesi-performans-olcutleri.md  2019-09-01-temel-bilesen-analizi-principal.md
docs/_sass/: plain.scss
docs/_sass/ext/: _fonts.scss
docs/assets/font/: fontello.eot
docs/html/: alcore_8h.html  alcore_8h.js  alcore_8h_source.html  annotated.html  annotated.js  classes.html  core_8h.html  core_8h.js  core_8h_source.html  core__macros_8h.html  core__macros_8h.js  core__macros_8h_source.html  cvcore_8h.html  cvcore_8h.js  cvcore_8h_source.html  dir_22759b2357b28df387ac7f15bd61889c.html  dir_22759b2357b28df387ac7f15bd61889c.js  dir_2b62a22b82aac776549c15514a2aafcf.html  dir_2b62a22b82aac776549c15514a2aafcf.js  dir_d44c64559bbebec7f509842c48db8b23.html  dir_d44c64559bbebec7f509842c48db8b23.js  files.html  functions.html  functions_vars.html  globals.html  globals_0x62.html  globals_0x63.html  globals_0x64.html  globals_0x65.html  globals_0x66.html  globals_0x67.html  globals_0x68.html  globals_0x69.html  globals_0x6a.html  globals_0x6c.html  globals_0x6d.html  globals_0x70.html  globals_0x72.html  globals_0x73.html  globals_0x74.html  (+52 more)
docs/html/search/: all_61.js  all_62.js  all_63.js  all_64.js  all_65.js  all_66.js  all_67.js  all_68.js  all_69.js  all_6a.js  all_6c.js  all_6d.js  all_70.js  all_72.js  all_73.js  all_74.js  all_76.js  all_77.js  all_78.js  all_79.js  all_7a.js  classes_63.js  classes_64.js  classes_66.js  classes_67.js  classes_68.js  classes_70.js  classes_72.js  classes_76.js  defines_61.js  defines_63.js  defines_64.js  defines_66.js  defines_69.js  defines_6a.js  defines_6c.js  defines_6d.js  defines_72.js  defines_73.js  defines_76.js  (+42 more)
docs/mainpage/: imlab_diagram.xml  mainpage.dox
docs/metro/: DoxygenLayout.xml
docs/xml/: alcore_8h.xml  core_8h.xml  core__macros_8h.xml  cvcore_8h.xml  dir_22759b2357b28df387ac7f15bd61889c.xml  dir_d44c64559bbebec7f509842c48db8b23.xml  imcore_8h.xml  imlab_8h.xml  index.xml  indexpage.xml  iocore_8h.xml  lacore_8h.xml  mainpage_8dox.xml  mlcore_8h.xml  prcore_8h.xml  structcolor__t.xml  structdisjoint__set__t.xml  structfeature__t.xml  structglm__t.xml  structhaar__t.xml  structmatrix__t.xml  structpoint__t.xml  structrectangle__t.xml  structstring__t.xml  structvector__t.xml
include/: alcore.h  core.h  core_macros.h  cvcore.h  imcore.h  iocore.h  lacore.h  mlcore.h  prcore.h
source_code/alcore/: alcore.h
source_code/alcore/private/: alcore_private.h
source_code/alcore/sources/: disjoint_set.c  quicksort.c
source_code/alcore/tests/: imlab_sort_test.c
source_code/core/: core.h  core_macros.h
source_code/core/private/: core_private.h
source_code/core/sources/: imlab_array.c  imlab_matrix.c  imlab_point.c  imlab_rectangle.c  imlab_string.c  imlab_type.c  imlab_vector.c
source_code/core/tests/: imlab_array_test.c  imlab_matrix_test.c  imlab_return_test.c  imlab_type_test.c
source_code/cvcore/: cvcore.h
source_code/cvcore/private/: cvcore_private.h
source_code/cvcore/sources/: encoder.c  feature.c  fern_detector.c  hog.c  lbp.c  npd.c  viola_jones.c
source_code/cvcore/tests/: imlab_cvcore_test.c
source_code/imcore/private/: imcore_private.h
source_code/imcore/sources/: box_filter.c  color_transform.c  draw.c  geometric_transform.c  image_bw.c  image_display_win32.c  image_display_xlib.c  image_io.c  rank_filter.c
source_code/imcore/tests/: imlab_image_test.c
source_code/iocore/: iocore.h
source_code/iocore/private/: iocore_private.h  json_private.h
source_code/iocore/sources/: bmp.c  csv.c  directory.c  file.c  getopt.c  imlab_version.c  json.c  json_data.c  json_parser.c  json_serial.c
source_code/iocore/tests/: imlab_csv_test.c  imlab_json_test.c
source_code/lacore/: lacore.h
source_code/lacore/private/: lacore_private.h
source_code/lacore/sources/: array.c  geometry.c  jacobi_eigen.c  matrix.c  trigonometry.c
source_code/mlcore/: mlcore.h
source_code/mlcore/private/: mlcore_private.h
source_code/mlcore/sources/: ann.c  (+6 more)
test/: .gitignore  imlab_array_test.c  imlab_csv_test.c  imlab_cvcore_test.c  imlab_image_test.c  imlab_json_test.c  imlab_matrix_test.c  imlab_type_test.c  imlab_vector_test.c
test/test_data/: sample.csv
(+12 files in other folders)
